--- a/m3-w7d2-css-selectors/src/main/webapp/index.html
+++ b/m3-w7d2-css-selectors/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Fun with Blocks</title>
-  <link rel="stylesheet" href="fun-with-blocks.css">
+  <link rel="stylesheet" href="fun-with-blocks-pyramid.css">
 </head>
 <body>
   <div id="box_0" class="box even">
