--- a/m4-w10d1-intro-to-javascript/index.html
+++ b/m4-w10d1-intro-to-javascript/index.html
@@ -5,7 +5,10 @@
 <body>
 	<h1>Javascript homework exercises</h1>
 	
-	<script type="text/javascript" src="javascript.js"></script>
+	<script type="text/javascript" src="javascript.js">
+			
+
+	</script>
 </body>
 </html>
 
